--- a/app/src/app/shared/components/slider/slider.component.scss
+++ b/app/src/app/shared/components/slider/slider.component.scss
@@ -8,3 +8,7 @@
 .carousel-control-next {
   width: 2%;
 }
+
+.slide {
+  height: 44em;
+}
